# pneumonia_detection

./: README.MD  pyproject.toml
Notebooks/: pneumonia_detection_AE.ipynb
