[project]
name = "pneumonia_detection"
version = "0.1.0"
description = "Comparing ML approaches for pneumonia detection from chest X-rays"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pillow",
    "jupyter",
    "ipykernel",
    "pandas",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true